--- a/faxe_hl/Build.xml
+++ b/faxe_hl/Build.xml
@@ -1,43 +1,19 @@
 <xml>
-
-
-<!-- TODO : Get this to work -->
-
-
     <section if="windows">
-        <set name="NATIVE_TOOLKIT_PATH" value="${LINC_FAXE_PATH}/lib/Windows" />
+        <set name="NATIVE_TOOLKIT_PATH" value="${this_dir}/../lib/Windows" />
     </section>
-
-    <!-- Outdated links for other platforms
-	<section if="linux HXCPP_M32">
-		<set name="NATIVE_TOOLKIT_PATH" value="${LINC_FAXE_PATH}/lib/Linux" />
-	</section>
-	
-	<section if="linux HXCPP_M64">
-		<set name="NATIVE_TOOLKIT_PATH" value="${LINC_FAXE_PATH}/lib/Linux64" />
-	</section>
-	
-	<section if="switch">
-		<set name="NATIVE_TOOLKIT_PATH" value="${LINC_FAXE_PATH}/lib/Switch" />
-	</section>
-    -->
-    <echo value="Found your FMOD API ${NATIVE_TOOLKIT_PATH}!" ifExists="${NATIVE_TOOLKIT_PATH}/api" />
-
-    <files id="haxe">
-        <compilerflag value="-I${LINC_FAXE_PATH}/faxe_hl" />
+    <echo value="${this_dir}"/>
+/    <!-- <echo value="Found your FMOD API ${NATIVE_TOOLKIT_PATH}!" ifExists="${NATIVE_TOOLKIT_PATH}/api" /> -->
+    <files id="faxe">
+        <compilerflag value="-I${this_dir}/" />
         <compilerflag value="-I${NATIVE_TOOLKIT_PATH}/api/core/inc/" />
         <compilerflag value="-I${NATIVE_TOOLKIT_PATH}/api/studio/inc/" />
-
-        <!-- Additional linux compiler flags
-		<compilerflag value="-std=c++11" if="linux" />
-		<compilerflag value="-Wl,-rpath,$ORIGIN" if="linux" />
-		-->
-
-        <file name="${LINC_FAXE_PATH}/faxe/faxe_hl.cpp" />
+        <compilerflag value="-I${HASHLINK}/include" />
+        <file name="${this_dir}/faxe_hl.cpp" />
     </files>
 
 
-    <target id="default" toolid="dll" unless="switch">
+    <target id="default" output="faxe" toolid="dll" tool="linker">
         <section if="windows HXCPP_M32">
             <lib name="${NATIVE_TOOLKIT_PATH}/api/core/lib/x86/fmod_vc.lib" />
             <lib name="${NATIVE_TOOLKIT_PATH}/api/studio/lib/x86/fmodstudio_vc.lib" />
@@ -47,39 +23,10 @@
             <lib name="${NATIVE_TOOLKIT_PATH}/api/core/lib/x64/fmod_vc.lib" />
             <lib name="${NATIVE_TOOLKIT_PATH}/api/studio/lib/x64/fmodstudio_vc.lib" />
         </section>
-        <lib name="${HASHLINK}/libhl.lib"/>
-        <!-- Outdated linux dependencies
-		<section if="linux HXCPP_M32">
-			<lib name="${NATIVE_TOOLKIT_PATH}/api/lowlevel/lib/x86/libfmod.so" />
-			<lib name="${NATIVE_TOOLKIT_PATH}/api/studio/lib/x86/libfmodstudio.so" />
-		</section>
 
-		<section if="linux HXCPP_M64">
-			<lib name="${NATIVE_TOOLKIT_PATH}/api/lowlevel/lib/x86_64/libfmod.so" />
-			<lib name="${NATIVE_TOOLKIT_PATH}/api/studio/lib/x86_64/libfmodstudio.so" />
-		</section>
-		-->
+        <files id="faxe"/>
+        <lib name="libhl32.lib"/>
+        <!-- <ext value=".hdll"/> -->
     </target>
-
-    <!--TODO OVERRIDE  BuildMain.xml in project ... in the end I never came up with a true fix for nx and had to blit it over...-->
-    <!-- on switch have to copypaster this in BuildMain.xml -->
-    <!-- <lib name="C:/HaxeToolkit_347/haxelibs/faxe/git/lib/Switch/api/lowlevel/lib/nx64/libfmod.a" /> -->
-    <!-- <lib name="C:/HaxeToolkit_347/haxelibs/faxe/git/lib/Switch/api/studio/lib/nx64/libfmodstudio.a" /> -->
-
-    <!-- put post builds here -->
-    <!-- <section if="windows" unless="switch">
-        <echo value="building for win." />
-
-        <section if="windows HXCPP_M32">
-            <copyFile name="fmod.dll" from="${NATIVE_TOOLKIT_PATH}/api/core/lib/x86" toolId="exe" allowMissing="false"/>
-            <copyFile name="fmodstudio.dll" from="${NATIVE_TOOLKIT_PATH}/api/studio/lib/x86" toolId="exe" allowMissing="false"/>
-        </section>
-
-        <section if="windows HXCPP_M64">
-            <copyFile name="fmod.dll" from="${NATIVE_TOOLKIT_PATH}/api/core/lib/x64" toolId="exe" allowMissing="false"/>
-            <copyFile name="fmodstudio.dll" from="${NATIVE_TOOLKIT_PATH}/api/studio/lib/x64" toolId="exe" allowMissing="false"/>
-        </section>
-    </section> -->
-
-
+    <copyFile name="faxe.hdll" from="${this_dir}" to="${this_dir}/../ndll/windows"toolId="dll"/>
 </xml>
